--- a/FlexboxHomework.html
+++ b/FlexboxHomework.html
@@ -79,7 +79,7 @@
         <div class="three">
             <div class="normalCircle" style="border-color: black"></div>
             <div class="normalCircle" style="border-color: orangered;align-self: center"></div>
-            <div class="normalCircle" style="border-color: green;align-self: end"></div>
+            <div class="normalCircle" style="border-color: green;align-self: flex-end"></div>
         </div>
         <div class="five">
             <div class="smallCircle" style="border-color: green"></div>
